fixed flex-align bug

--- a/src/components/PostContextMenu/Menu/menu.css
+++ b/src/components/PostContextMenu/Menu/menu.css
@@ -6,7 +6,7 @@
   margin-left: 20px;
   margin-right: 20px;
 }
-
+/* TODO should delete
 .full-screen-container_menu {
   width: 100%;
   position: fixed;
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
 }
-
+*/
 .header_menu {
   width: 100%;
   height: 40px;
@@ -70,6 +70,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .filler_menu {
